# ChangeLog for app-emacs/ecb
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/ecb/ChangeLog,v 1.38 2009/04/06 21:04:45 ulm Exp $

  06 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -ecb-2.32-r2.ebuild:
  Remove old.

  06 Apr 2009; Markus Meier <maekke@gentoo.org> ecb-2.32-r3.ebuild:
  amd64/x86 stable, bug #264804

  06 Apr 2009; Brent Baude <ranger@gentoo.org> ecb-2.32-r3.ebuild:
  stable ppc, bug 264804

*ecb-2.32-r3 (03 Mar 2009)

  03 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +files/ecb-2.32-gentoo.patch,
  +ecb-2.32-r3.ebuild:
  Install pixmaps under SITEETC instead of SITELISP. Use proper patch for
  help and info paths, instead of sed tweaks. Allow any compress extension
  of Info files; don't hardcode .gz. Add alternative load-path for jde, in
  order to prepare for a later change of its install location.

  24 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  -files/70ecb-gentoo.el, -ecb-2.32-r1.ebuild:
  clean up

  24 Sep 2007; Christoph Mende <angelos@gentoo.org> ecb-2.32-r2.ebuild:
  Stable on amd64 wrt bug #193515

  24 Sep 2007; Christian Faulhammer <opfer@gentoo.org> ecb-2.32-r2.ebuild:
  stable x86, bug 193515

  23 Sep 2007; nixnut <nixnut@gentoo.org> ecb-2.32-r2.ebuild:
  Stable on ppc wrt bug 193515

  23 Sep 2007; Ulrich Mueller <ulm@gentoo.org> ecb-2.32-r2.ebuild:
  Remove dependency on speedbar and eieio since they have been last-rited.

  15 Jul 2007; Ulrich Mueller <ulm@gentoo.org> ecb-2.32-r2.ebuild:
  Add informational message to pkg_postinst.

*ecb-2.32-r2 (06 Jul 2007)

  06 Jul 2007; Ulrich Mueller <ulm@gentoo.org> +files/71ecb-gentoo.el,
  ecb-2.32-r1.ebuild, +ecb-2.32-r2.ebuild:
  Use autoload mechanism in sitefile. Emake instead of make in src_compile.
  Dropped ~ppc-macos keyword.

  09 Jan 2007; Christian Faulhammer <opfer@gentoo.org> -ecb-2.21.ebuild,
  -ecb-2.24.ebuild, -ecb-2.27.ebuild, -ecb-2.31.ebuild, -ecb-2.32.ebuild:
  clean up
