@@ -3,32 +3,30 @@
 <pkgmetadata>
 <herd>emacs</herd>
 <longdescription>
-ECB stands for "Emacs Code Browser". While Emacs already has good editing
-support for many modes, its browsing support is somewhat lacking. That's where
-ECB comes in: it displays a number of informational windows that allow for easy
-source code navigation and overview.
+  ECB stands for "Emacs Code Browser". While Emacs already has good editing
+  support for many modes, its browsing support is somewhat lacking. That's
+  where ECB comes in: it displays a number of informational windows that allow
+  for easy source code navigation and overview.
 
-The informational windows can contain:
+  The informational windows can contain:
 
-  * A directory tree,
-  * a list of source files in the current directory,
+    * A directory tree,
+    * a list of source files in the current directory,
+    * a list of functions/classes/methods/... in the current file, (ECB uses
+      the Semantic Bovinator, or Imenu, or etags, for getting this list so all
+      languages supported by any of these tools are automatically supported by
+      ECB too),
+    * a history of recently visited files,
+    * the Speedbar and
+    * output from compilation (the compilation window) and other modes like
+      help, grep etc. or whatever a user defines to be displayed in this
+      window.
 
-  * a list of functions/classes/methods/... in the current file, (ECB uses the
-    Semantic Bovinator, or Imenu, or etags, for getting this list so all
-    languages supported by any of these tools are automatically supported by ECB
-    too)
+  As an added bonus, ECB makes sure to keep these informational windows
+  visible, even when you use C-x 1 and similar commands.
 
-  * a history of recently visited files,
-  * the Speedbar and
-
-  * output from compilation (the compilation window) and other modes like help,
-    grep etc. or whatever a user defines to be displayed in this window.
-
-As an added bonus, ECB makes sure to keep these informational windows visible,
-even when you use C-x 1 and similar commands.
-
-It goes without saying that you can configure the layout, ie. which
-informational windows should be displayed where. ECB comes with a number of
-ready-made window layouts to choose from.
+  It goes without saying that you can configure the layout, ie. which
+  informational windows should be displayed where. ECB comes with a number of
+  ready-made window layouts to choose from.
 </longdescription>
 </pkgmetadata>
