@@ -1,6 +1,11 @@
 # ChangeLog for app-emacs/ecb
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ecb/ChangeLog,v 1.38 2009/04/06 21:04:45 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ecb/ChangeLog,v 1.39 2009/05/17 08:21:57 ulm Exp $
+
+*ecb-2.40 (17 May 2009)
+
+  17 May 2009; Ulrich Mueller <ulm@gentoo.org> +ecb-2.40.ebuild:
+  Version bump, bug 270121.
 
   06 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -ecb-2.32-r2.ebuild:
   Remove old.
@@ -149,7 +154,7 @@
 
   1 Jan 2003; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
   ecb-1.90.ebuild, files/50ecb-gentoo.el, files/ecb-1.9-gentoo.patch,
-  files/digest-ecb-1.80 : 
+  files/digest-ecb-1.80 :
 
   Minor version bump.
 
